<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/iv_bg" >

    <RelativeLayout
        android:id="@+id/netset_ll_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dip"
        android:layout_marginTop="25dip" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="15dip"
            android:text="@string/setting"
            android:textColor="#ffffff"
            android:textSize="56sp" />

        <ImageView
            android:id="@+id/iv_v"
            android:layout_width="1dip"
            android:layout_height="70dip"
            android:layout_marginLeft="3dip"
            android:layout_marginTop="20dip"
            android:layout_toRightOf="@id/TextView01"
            android:background="#ffffff" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/TextView01"
            android:layout_alignBottom="@+id/TextView01"
            android:layout_marginLeft="3dip"
            android:layout_toRightOf="@+id/iv_v"
            android:text="@string/setting_net"
            android:textColor="#ffffff"
            android:textSize="36sp" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="59dp"
            android:layout_marginTop="20dip"
            android:background="@drawable/image_focus"
            android:padding="2dip"
            android:src="@drawable/detect" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_wifi_conn"
        android:layout_width="153.33dip"
        android:layout_height="244.67dip"
        android:layout_below="@id/netset_ll_title"
        android:layout_marginLeft="227.33dip"
        android:layout_marginTop="30dip"
        android:background="@drawable/net_set_focus"
        android:focusable="true"
        android:gravity="center"
        android:padding="1dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ll_content_wifi"
            android:background="@color/setting_tab_nomarl"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/wifi"
                android:layout_width="110dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/setting_net_wifi"
                android:textColor="#ffffff"
                android:textSize="40sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_net_conn"
        android:layout_width="153.33dip"
        android:layout_height="244.67dip"
        android:layout_alignLeft="@id/ll_wifi_conn"
        android:layout_below="@id/ll_wifi_conn"
        android:layout_marginTop="0dip"
        android:background="@drawable/net_set_focus"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="1dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ll_content_net"
            android:background="@color/setting_tab_nomarl"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dip" >

            <TextView
                android:id="@+id/net_conn"
                android:layout_width="110dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:lines="2"
                android:text="@string/setting_net_eth"
                android:textColor="#ffffff"
                android:textSize="40sp" />
        </LinearLayout>
    </LinearLayout>

    <!-- wifi选择列表 -->

    <com.hiveview.domybox.view.settings.WifiSettingView
        android:id="@+id/fl_wifi_info"
    	android:layout_width="630dip"
        android:layout_height="360dip"
        android:layout_alignBottom="@id/ll_net_conn"
        android:layout_alignTop="@id/ll_wifi_conn"
        android:layout_marginLeft="13.33dip"
        android:layout_toRightOf="@id/ll_wifi_conn"
        android:listSelector="@drawable/lv_selector"
    />

    <LinearLayout
        android:id="@+id/ll_no_connect_bg"
        android:layout_width="630dip"
        android:layout_height="360dip"
        android:layout_alignBottom="@id/ll_net_conn"
        android:layout_alignTop="@id/ll_wifi_conn"
        android:layout_marginLeft="13.33dip"
        android:layout_toRightOf="@id/ll_wifi_conn"
        android:background="#CC191919"
        android:visibility="gone"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="24sp"
            android:gravity="center"
            android:text="@string/setting_eth_not_found" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="24sp"
            android:gravity="center"
            android:text="@string/setting_open_net" />
    </LinearLayout>

    <!-- 网络设置界面，IP,DNS -->

    <com.hiveview.domybox.view.settings.EtherNetView
        android:id="@+id/ll_ethernet_info"
        android:layout_width="630dip"
        android:layout_height="360dip"
        android:layout_alignBottom="@id/ll_net_conn"
        android:layout_alignTop="@id/ll_wifi_conn"
        android:layout_marginLeft="13.33dip"
        android:layout_toRightOf="@id/ll_wifi_conn"
        android:background="#CC191919"
        android:orientation="vertical" >
        
        <TextView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tv_ether_waiting"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/ether_net_connecting" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_set_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/wrong" />

            <TextView
                android:id="@+id/tv_set_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_eth0"
                android:textColor="#ffffff"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_net_set_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dip"
            android:background="@drawable/net_info_set_selector"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dip" >

            <TextView
                android:id="@+id/tv_netset_ip"
                android:layout_width="70dip"
                android:layout_height="50dip"
                android:background="#454545"
                android:gravity="center"
                android:text="@string/setting_ip"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tv_netset_ip_value"
                android:layout_width="320dip"
                android:layout_height="50dip"
                android:background="#000000"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_net_set_ym"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dip"
            android:background="@drawable/net_info_set_selector"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dip" >

            <TextView
                android:id="@+id/tv_netset_ym"
                android:layout_width="70dip"
                android:layout_height="50dip"
                android:background="#454545"
                android:gravity="center"
                android:text="@string/setting_mask"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tv_netset_ym_value"
                android:layout_width="320dip"
                android:layout_height="50dip"
                android:background="#000000"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_net_set_wg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dip"
            android:background="@drawable/net_info_set_selector"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dip" >

            <TextView
                android:id="@+id/tv_netset_wg"
                android:layout_width="70dip"
                android:layout_height="50dip"
                android:layout_gravity="center"
                android:background="#454545"
                android:gravity="center"
                android:text="@string/setting_gateway"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tv_netset_wg_value"
                android:layout_width="320dip"
                android:layout_height="50dip"
                android:layout_gravity="center"
                android:background="#000000"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_net_set_dns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dip"
            android:background="@drawable/net_info_set_selector"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="1dip" >

            <TextView
                android:id="@+id/tv_netset_dns"
                android:layout_width="70dip"
                android:layout_height="50dip"
                android:layout_gravity="center"
                android:background="#454545"
                android:gravity="center"
                android:text="@string/setting_DNS"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tv_netset_dns_value"
                android:layout_width="320dip"
                android:layout_height="50dip"
                android:layout_gravity="center"
                android:background="#000000"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/ll_netset_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/image_focus"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="2dip"
                android:visibility="gone" >

                <Button
                    android:id="@+id/tv_netset_connect"
                    android:layout_width="160dip"
                    android:layout_height="50dip"
                    android:layout_gravity="center"
                    android:background="@drawable/iv_app_button"
                    android:gravity="center"
                    android:text="@string/setting_modify"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_netset_forgetnet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dip"
                android:background="@drawable/image_focus"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="2dip"
                android:visibility="gone" >

                <Button
                    android:id="@+id/tv_netset_forgetnet"
                    android:layout_width="160dip"
                    android:layout_height="50dip"
                    android:layout_gravity="center"
                    android:background="@drawable/iv_app_button"
                    android:gravity="center"
                    android:text="@string/setting_net_delete"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />
            </LinearLayout>
        </LinearLayout>
        
    </com.hiveview.domybox.view.settings.EtherNetView>

</RelativeLayout>